--- a/index.html
+++ b/index.html
@@ -140,10 +140,87 @@
         </p>
     </article>
 
+    <!DOCTYPE html>
+
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Amor no correspondido: dolor, aceptación y resignación</title>
+    <meta name="description" content="Reflexión profunda sobre el amor no correspondido, el dolor aceptado y la resignación silenciosa. Un texto íntimo sobre amar sin ser elegido.">
+
+```
+<style>
+    body {
+        margin: 0;
+        font-family: 'Georgia', serif;
+        background-color: #0e0e0e;
+        color: #e6e6e6;
+        line-height: 1.8;
+    }
+
+    main {
+        max-width: 800px;
+        margin: auto;
+        padding: 60px 24px;
+    }
+
+    h1 {
+        font-size: 2.4rem;
+        margin-bottom: 8px;
+        color: #ffffff;
+    }
+
+    .meta {
+        font-size: 0.9rem;
+        color: #9a9a9a;
+        margin-bottom: 40px;
+    }
+
+    p {
+        font-size: 1.1rem;
+        margin-bottom: 24px;
+    }
+
+    footer {
+        margin-top: 80px;
+        padding-top: 20px;
+        border-top: 1px solid #222;
+        font-size: 0.85rem;
+        color: #777;
+        text-align: center;
+    }
+</style>
+```
+
+</head>
+<body>
+
+<main>
+
+<h1>Amor no correspondido: dolor, aceptación y resignación</h1>
+<div class="meta">Publicado por WOLFOCEAN.J.R  18 de diciembre.</div>
+
+<p>No me quedé por error.<br>
+Me quedé porque quise.</p>
+
+<p>Amarte sin ser amado fue el cuchillo que me clavé yo mismo. No porque no lo viera, sino porque lo acepté. Hay dolores que uno elige sostener cuando la esperanza todavía respira, aunque sepa que va a sangrar.</p>
+
+<p>Sonreí. No por valentía, sino por resignación. Porque entender también duele, y aceptar es aprender a caminar con el filo dentro sin pedir explicaciones.</p>
+
+<p>Nadie me empujó a este silencio. Fui yo, quedándome donde no me esperaban, llamando amor a la ausencia, y paciencia a la herida.</p>
+
+<p>El amor no correspondido no grita. Enseña. Te rompe despacio hasta que comprendes que querer también es saber irse… aunque tardes.</p>
+
+<p>Y si hoy sigo de pie, no es porque no doliera.<br>
+Es porque aprendí a cargar el cuchillo con una sonrisa cansada, y a seguir creando desde ahí.</p>
+</main>
+
+
     <footer>
         <p>© 2025 · WOLFOCEAN.J.R. Todos los derechos reservados.</p>
         <p>Textos e imágenes protegidos por derechos de autor. Código bajo Licencia MIT.</p>
     </footer>
-
+    
 </body>
 </html>
